@@ -7,7 +7,7 @@ import java.net.NetworkInterface;
 import java.util.Enumeration;
 
 public class LicenseServer {
-    public static String[] getSystemInfo() throws IOException {
+    public static String[] getSystemInfo() throws IOException, InterruptedException {
 	String OS = System.getProperty("os.name").toLowerCase();
 	String sMachineId = getMachineId(OS);
 	String sMacAddress = getMacAddress(OS);
@@ -42,23 +42,31 @@ public class LicenseServer {
 	return sMacAddress;
     }
 
-    private static String getMachineId(String OS) throws IOException {
+    private static String getMachineId(String OS) throws InterruptedException, IOException {
 	String sMachineId = null;
 
 	if (OS.indexOf("win") >= 0) {
-	    Process process = Runtime.getRuntime().exec("wmic csproduct get UUID");
+	    ProcessBuilder builder = new ProcessBuilder("powershell.exe", "-Command",
+		    "(Get-CimInstance -Class Win32_ComputerSystemProduct).UUID");
+	    builder.redirectErrorStream(true);
+	    Process process = builder.start();
+
 	    BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
 	    String line;
 	    while ((line = reader.readLine()) != null) {
-		if (!line.contains("UUID") && !line.trim().isEmpty()) {
-		    sMachineId = line.trim();
+		String value = line.trim();
+		if (!(value.isEmpty() || value.contains("Guid") || value.contains("--"))) {
+		    sMachineId = value;
 		    break;
 		}
 	    }
+
+	    process.waitFor();
 	} else if (OS.indexOf("nix") >= 0 || OS.indexOf("nux") >= 0 || OS.indexOf("aix") >= 0) {
 	    Process process = Runtime.getRuntime().exec("cat /etc/machine-id");
 	    BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-	    sMachineId = reader.readLine();
+	    String line = reader.readLine();
+	    sMachineId = line.trim();
 	}
 
 	return sMachineId;
